changed heading for report submitted

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -259,7 +259,7 @@
                 <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/reason-for-decline" >Why have you declined this report?</a></li>
                 <ul class="govuk-list govuk-list--bullet">
                     <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=Declined" >Report declined</a></li>
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=" >Report signed off</a></li>
+                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=" >Report signed off and submitted</a></li>
                 </ul>
                 <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/section151" >Email: Review needed: funding progress report for ((organisation_name))</a></li>
                 <ul class="govuk-list govuk-list--bullet">
