rename and move of emails section

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -189,8 +189,8 @@
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  Submit your report (removed)</li>
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/report/confirmation" >Report submitted</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-submitted" >Email: Your report for ((fund_name)) has been sent for review (Reporter)</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/section151" >Email: Review needed: funding progress report for ((organisation_name)) (Section 151)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-submitted" >Email: Your report for ((fund_name)) has been sent for review (Reporter)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/review-needed" >Email: Review needed: funding progress report for ((organisation_name)) (Section 151)</a></li>
                 </ul>
             </ul>
             
@@ -202,10 +202,10 @@
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=Declined" >Report declined</a></li>
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=" >Report signed off</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation" >Email: You signed off a report for ((organisation_name)) (Section 151)</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined-confirmation" >Email: You declined a report from ((organisation_name)) (Section 151)</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation-reporter" >Email: Your report has been signed off (Reporter)</a></li>                    
-                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined" >Email: Your report for ((fund_name)) has been declined (Reporter)</a></li>                    
+                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/report-signed-off" >Email: You signed off a report for ((organisation_name)) (Section 151)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/report-declined" >Email: You declined a report from ((organisation_name)) (Section 151)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-signed-off" >Email: Your report has been signed off (Reporter)</a></li>                    
+                    <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-declined" >Email: Your report for ((fund_name)) has been declined (Reporter)</a></li>                    
                 </ul>
             </ul>              
         {% endset -%} 
