--- a/app/views/user-research/index.html
+++ b/app/views/user-research/index.html
@@ -26,7 +26,7 @@
                 }) }}
             </form> 
 
-            <form action="/emails/section151" method="post" >                    
+            <form action="/emails/sign-off/review-needed" method="post" >                    
                 {{ govukButton({
                     text: "Section 151 Officer review"
                 }) }}
