--- a/app/views/emails/reporter/report-signed-off.html
+++ b/app/views/emails/reporter/report-signed-off.html
@@ -69,9 +69,9 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/emails/report-declined">Email showing report declined</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/emails/reporter/report-declined">Email showing report declined</a></p>
   
-    <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
+    <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/sign-off/review-needed">Section 151 email</a></p> -->
 
 
 
