--- a/app/views/emails/sign-off/report-signed-off.html
+++ b/app/views/emails/sign-off/report-signed-off.html
@@ -63,7 +63,7 @@
 
     <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link" href="/project/sign-off/">Return to report sign off options</a></p>
   
-    <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
+    <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/sign-off/review-needed">Section 151 email</a></p> -->
 
 
 
