--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -237,8 +237,8 @@
         {% set findHtml %}            
             <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Find monitoring data</h2>            
             <ul class="govuk-list govuk-list--bullet">                
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/find/download-data" >Get monitoring and evaluation data</a></li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/find/confirmation" >Request received</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-data" >Get monitoring and evaluation data</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/confirmation" >Request received</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/get-data" >Email: Monitoring and evaluation data</a></li>                
             </ul>              
         {% endset -%}  
