--- a/app/views/get-monitoring-data/download-file-expired.html
+++ b/app/views/get-monitoring-data/download-file-expired.html
@@ -19,12 +19,12 @@
 		<p>Your data download link expired on {date}.</p>						
 		<!-- <p>You can:</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li><a href="/find/confirmation">request another email with a download link</a> using your previously filtered options</li>
-			<li><a href="/find/download-data">create a new data download using new filter options</a></li>
+			<li><a href="/get-monitoring-data/confirmation">request another email with a download link</a> using your previously filtered options</li>
+			<li><a href="/get-monitoring-data/download-data">create a new data download using new filter options</a></li>
 		</ul> -->
 
 
-		<p>You can <a href="/find/download-data">create a new data download using new filter options</a>.</p>
+		<p>You can <a href="/get-monitoring-data/download-data">create a new data download using new filter options</a>.</p>
 		
 		
 		
@@ -34,7 +34,7 @@
 
 
 
-		<!-- <form method="post" action="/find/confirmation" >
+		<!-- <form method="post" action="/get-monitoring-data/confirmation" >
 
 			{{ govukButton({
 				text: "Download your data"	
