restructured includes folder

--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -26,12 +26,12 @@
 		<p class="govuk-body govuk-!-margin-bottom-7">Due by 10 December 2024</p>
 		<!-- <br><span class="govuk-body-s">Last updated: 1 June 2024 by Gemma Currie</span></p> -->
 	
-		{% include "includes/task-overview.html" %}
-		{% include "includes/task-issues-and-risks.html" %}
-		{% include "includes/task-delivery.html" %}
-		{% include "includes/task-expenditure.html" %}		
-		<!-- {% include "includes/task-changes.html" %} -->
-		<!-- {% include "includes/task-sign-off.html" %} -->
+		{% include "includes/taskList/task-overview.html" %}
+		{% include "includes/taskList/task-issues-and-risks.html" %}
+		{% include "includes/taskList/task-delivery.html" %}
+		{% include "includes/taskList/task-expenditure.html" %}		
+		<!-- {% include "includes/taskList/task-changes.html" %} -->
+		<!-- {% include "includes/taskList/task-sign-off.html" %} -->
 
 		<p class="govuk-body govuk-!-margin-top-7">Content to follow. All content is available under the Open Government Licence v3.0, except where otherwise stated</p>
 		<form method="post" action="/project/report/check-your-answers" >
