added in lines about report is not editable

--- a/app/views/emails/reporter/report-submitted.html
+++ b/app/views/emails/reporter/report-submitted.html
@@ -46,6 +46,7 @@
       			<li>sign off the report and submit it to Towns Fund</li>
       			<li>decline the report</li>
     		</ul>    
+			<p class="govuk-body">You will not be able to edit the report while it’s waiting for review.</p>
     		<p>You’ll be sent an email to let you know the outcome. </p>
     		<!-- <p>Your report will either be signed off and submitted to {{ data.fundName }} or declined. You’ll be sent an email by {{ data.fundDate }} to let you know the outcome.</p> -->
     		<p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
