--- a/app/views/emails/sign-off/report-signed-off.html
+++ b/app/views/emails/sign-off/report-signed-off.html
@@ -43,7 +43,7 @@
             </div>
       
         
-          <p><a href="#">Sign in to view or download the submitted report</a></p>
+          <!-- <p><a href="#">Sign in to view or download the submitted report</a></p> -->
           
           <h2 class="govuk-heading-m">Get help</h2>	
       
