--- a/app/views/report/locations/change-postcode.html
+++ b/app/views/report/locations/change-postcode.html
@@ -19,7 +19,7 @@
 
 		<p>If a project has multiple postcodes, enter the postcodes with a comma seperating each one.</p>
 
-        <form method="post" action="/report/locations/" >
+        <form method="post" action="/report/locations/postcodes" >
             
             {{ govukInput({
                 label: {
