--- a/app/views/report/risks/index.html
+++ b/app/views/report/risks/index.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Do you need to add any risks?" %}
+{% set pageHeading = "About this section" %}
 {% set pageSection = "Risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -12,40 +12,23 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-			
-		<p>We use this information to:</p>		
-		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-			<li>see how risks are being managed</li>
-			<li>offer you support</li>
-			<li>learn from previous issues</li>
-		</ul>
-
-		<form method="post" action="/report/risks/funds/reports-risks" >	  
 		
-			{{ govukRadios({		
-				classes: "govuk-radios--inline",		
-				name: "projecRisks",
-				id: "projecRisks",				
-				fieldset: {
-				  legend: {
-					text: "Do you need to add any project risks?",
-					isPageHeading: false,
-					classes: "govuk-fieldset__legend govuk-visually-hidden"
-					}
-				},				
-				items: [
-				  { value: "Yes~/report/risks/add/", text: "Yes" },
-				  { value: "No", text: "No" }
-				]
-			}) }}
+		<p>We use this page to see how we might be able to give information about the section. For example, you what you might need or things we will ask about:</p>
+      	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        	<li>content TBC</li>
+        	<li>content TBC</li>
+        	<li>content TBC</li>
+			</ul>
+
+		<form method="post" action="/report/risks/add-risks" >            			
 			
 			{{ govukButton({
 				text: "Continue"
-			}) }}						  
+			}) }}			
 
 		</form>
 
-	</div>
+  	</div>	  
 </div>
 
 {% endblock %}
