--- a/app/views/report/locations/postcodes.html
+++ b/app/views/report/locations/postcodes.html
@@ -15,87 +15,47 @@
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
     </div>
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-full">        
 
-        <table class="govuk-table">
-            <!-- <caption class="govuk-table__caption govuk-table__caption--l">Locations</caption> -->
-            <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-half">Project</th>
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Postcodes</th>
-                    <th scope="col" class="govuk-table__header"></th>
-                </tr>
-            </thead>
-            <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">George Elliott Visitor Centre</td>
-                    <td class="govuk-table__cell">CV11 5QS</td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/change-postcode">Edit</a></td>
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">Digital Skills and Innovation Centre</td>
-                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">The Saints</td>
-                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+        {{ govukTable({
+            caption: "Project postcodes",
+            captionClasses: "govuk-table__caption govuk-visually-hidden",
+            firstCellIsHeader: false,
+            head: [
+                { text: "Project", classes: "govuk-!-width-one-half" },
+                { text: "Postcodes", classes: "govuk-!-width-one-third" },
+                { text: "", classes: "" }
+            ],
+            rows: [
+                [
+                    { text: "George Elliott Visitor Centre" },
+                    { html: "Postcode provided" if data['projectLocation'] else '<a href="/report/locations/add-postcode?project=1" class="govuk-link">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation'] else '' }
+                ],
+                [
+                    { text: "Digital Skills and Innovation Centre" },
+                    { html: "Postcode provided" if data['projectLocation2'] else '<a href="/report/locations/add-postcode?project=2" class="govuk-link">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation2'] else '' }
+                ],
+                [
+                    { text: "The Saints" },
+                    { html: "Postcode provided" if data['projectLocation3'] else '<a href="/report/locations/add-postcode?project=3" class="govuk-link">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation3'] else '' }
+                ],
+                [
+                    { text: "Weddington Road Cycle Scheme" },
+                    { html: "Postcode provided" if data['projectLocation4'] else '<a href="/report/locations/add-postcode?project=4" class="govuk-link">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation4'] else '' }
+                ],
+                [
+                    { text: "Visiting Nuneaton: Changing Perspectives" },
+                    { html: "Postcode provided" if data['projectLocation5'] else '<a href="/report/locations/add-postcode?project=5" class="govuk-link">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation5'] else '' }
+                ]
+            ]
+        }) }}
 
-                    <!-- <a href="/report/locations/add-postcode">Add postcodes</a> -->
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">Weddington Road Cycle Scheme</td>
-                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">Visiting Nuneaton: Changing Perspectives</td>
-                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                </tr>
-            </tbody>
-          </table>
-
-
-
-
-
-          
-          <!-- <table class="govuk-table">
-            <caption class="govuk-table__caption govuk-table__caption--m">George Elliott Visitor Centre</caption>
-            <thead class="govuk-table__head">
-                <tr class="govuk-table__row">                    
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Postcodes</th>
-                    <th scope="col" class="govuk-table__header"></th>
-                </tr>
-            </thead>
-            <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">                    
-                    <td class="govuk-table__cell">CV11 5QS</td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/change-postcode">Edit</a></td>
-                </tr>                
-            </tbody>
-          </table>
-
-          <table class="govuk-table">
-            <caption class="govuk-table__caption govuk-table__caption--m">Digital Skills and Innovation Centre</caption>
-            <thead class="govuk-table__head">
-                <tr class="govuk-table__row">                    
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Postcodes</th>
-                    <th scope="col" class="govuk-table__header"></th>
-                </tr>
-            </thead>
-            <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">                    
-                    <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
-                </tr>                
-            </tbody>
-          </table> -->
-
-
-          <form method="post" action="/report/pathfinders-report" >        
+        <form method="post" action="/report/pathfinders-report" >        
 				
             {{ govukButton({
 				text: "Save and continue"
@@ -103,7 +63,7 @@
 		
 		</form>
 
-  	</div>	  
+  	</div>  
 </div>
 
 {% endblock %}
