--- a/app/views/report/locations/postcodes.html
+++ b/app/views/report/locations/postcodes.html
@@ -29,28 +29,28 @@
             rows: [
                 [
                     { text: "George Elliott Visitor Centre" },
-                    { html: "Postcode provided" if data['projectLocation'] else '<a href="/report/locations/add-postcode?project=1" class="govuk-link">Add postcodes</a>' },
-                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation'] else '' }
+                    { html: "Postcode provided" if data['projectLocation'] else '<a href="/report/locations/add-postcode?project=1" class="govuk-link govuk-link--no-visited-state">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1"  class="govuk-link govuk-link--no-visited-state">Change</a>' if data['projectLocation'] else '' }
                 ],
                 [
                     { text: "Digital Skills and Innovation Centre" },
-                    { html: "Postcode provided" if data['projectLocation2'] else '<a href="/report/locations/add-postcode?project=2" class="govuk-link">Add postcodes</a>' },
-                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation2'] else '' }
+                    { html: "Postcode provided" if data['projectLocation2'] else '<a href="/report/locations/add-postcode?project=2" class="govuk-link govuk-link--no-visited-state">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link govuk-link--no-visited-state">Change</a>' if data['projectLocation2'] else '' }
                 ],
                 [
                     { text: "The Saints" },
-                    { html: "Postcode provided" if data['projectLocation3'] else '<a href="/report/locations/add-postcode?project=3" class="govuk-link">Add postcodes</a>' },
-                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation3'] else '' }
+                    { html: "Postcode provided" if data['projectLocation3'] else '<a href="/report/locations/add-postcode?project=3" class="govuk-link govuk-link--no-visited-state">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link govuk-link--no-visited-state">Change</a>' if data['projectLocation3'] else '' }
                 ],
                 [
                     { text: "Weddington Road Cycle Scheme" },
-                    { html: "Postcode provided" if data['projectLocation4'] else '<a href="/report/locations/add-postcode?project=4" class="govuk-link">Add postcodes</a>' },
-                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation4'] else '' }
+                    { html: "Postcode provided" if data['projectLocation4'] else '<a href="/report/locations/add-postcode?project=4" class="govuk-link govuk-link--no-visited-state">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link govuk-link--no-visited-state">Change</a>' if data['projectLocation4'] else '' }
                 ],
                 [
                     { text: "Visiting Nuneaton: Changing Perspectives" },
-                    { html: "Postcode provided" if data['projectLocation5'] else '<a href="/report/locations/add-postcode?project=5" class="govuk-link">Add postcodes</a>' },
-                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link">Change</a>' if data['projectLocation5'] else '' }
+                    { html: "Postcode provided" if data['projectLocation5'] else '<a href="/report/locations/add-postcode?project=5" class="govuk-link govuk-link--no-visited-state">Add postcodes</a>' },
+                    { html: '<a href="/report/locations/change-postcode?project=1" class="govuk-link govuk-link--no-visited-state">Change</a>' if data['projectLocation5'] else '' }
                 ]
             ]
         }) }}
