--- a/app/views/index.html
+++ b/app/views/index.html
@@ -148,9 +148,9 @@
                 <!-- Locations -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project locations</h3>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/" >Projects</a></li>
-                    <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/add-postcode" >Add postcode</a></li>
-                    <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/change-postcode" >Change postcode</a></li>                
+                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/" >Projects</a></li>
+                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/add-postcode" >Add postcode</a></li>
+                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/change-postcode" >Change postcode</a></li>                
                 </ul>
                 <!-- RAG -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project RAG ratings</h3>
